Fix spacing and destructure some objects

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -74,14 +74,14 @@ body {
   text-align:right;
 }
 
-.chart__select a{
+.chart__select a {
   margin: 0rem 0rem 1rem 0.5rem;
   display:inline-block;
   color:inherit;
   text-decoration: none;
   font-weight: 100;
 }
-.chart__select a:visited, .chart__select a:hover{
+.chart__select a:target, .chart__select a:hover{
   font-weight: 300;
   color: var(--color-white);
 }
